Cambios realizados que permiten autenticación y utilización de metodos CRUD de usuario.